--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
+arxiv==2.1.3
 async-timeout==4.0.3
 attrs==25.2.0
 blinker==1.9.0
@@ -38,7 +39,6 @@ langgraph==0.3.7
 langgraph-checkpoint==2.0.18
 langgraph-prebuilt==0.1.2
 langgraph-sdk==0.1.55
-langsmith==0.3.13
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 msgpack==1.1.0
